--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.2
+  - 2.3.2
 gemfile:
   - Gemfile.rails-3.0
   - Gemfile.rails-3.1
   - Gemfile.rails-3.2
   - Gemfile.rails-4.1
+  - Gemfile.rails-5.0
   - Gemfile.haml-edge
