--- a/sinatra_app/Gemfile
+++ b/sinatra_app/Gemfile
@@ -1,5 +1,5 @@
 source :rubygems
-gem "green_monkey", :path => "../", :require => "green_monkey"
+gem 'green_monkey', path: '../', require: 'green_monkey'
 gem 'chronic_duration', git: 'git://github.com/Paxa/chronic_duration.git', ref: '8c0d0e101b'
 gem 'actionpack', require: false
 gem 'sinatra'
